changing travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,10 @@ jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
+before_install:
+  # clone java-dirq repo
+  - git clone --depth=100 --quiet --branch=master git://github.com/mpaladin/java-dirq.git mpaladin/java-dirq
+  - cd mpaladin/java-dirq
+  - mvn clean install
+  - cd ../../
 
