--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 
     <developers>
         <developer>
+            <name>Lionel Cons</name>
+            <email>lionel.cons@cern.ch</email>
+            <url>http://cern.ch/lionel.cons</url>
+        </developer>
+        <developer>
             <name>Massimo Paladin</name>
             <email>massimo.paladin@gmail.com</email>
             <url>http://mpaladin.com</url>
@@ -57,7 +62,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -141,7 +146,7 @@
         <dependency>
             <groupId>ch.cern.dirq</groupId>
             <artifactId>dirq</artifactId>
-            <version>1.3</version>
+            <version>1.4-20130607.111405-2</version>
         </dependency>
     </dependencies>
 </project>
