--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <description>Directory based queue test utility.</description>
   <url>https://github.com/cern-mig/java-dirq-test</url>
   <prerequisites>
-    <maven>2.2.1</maven>
+    <maven>3.0.1</maven>
   </prerequisites>
 
   <licenses>
@@ -54,7 +54,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.5</version>
         <configuration>
           <descriptors>
             <descriptor>src/main/assembly/src.xml</descriptor>
@@ -66,14 +66,18 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
+          <compilerArgs>
+            <arg>-Xlint:all</arg>
+            <arg>-Werror</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.2</version>
+        <version>2.10.3</version>
         <configuration>
           <nohelp>true</nohelp>
           <show>public</show>
@@ -134,12 +138,7 @@
   </profiles>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
+    <!-- runtime dependencies -->
     <dependency>
       <groupId>com.lexicalscope.jewelcli</groupId>
       <artifactId>jewelcli</artifactId>
@@ -149,6 +148,13 @@
       <groupId>ch.cern.dirq</groupId>
       <artifactId>dirq</artifactId>
       <version>1.5</version>
+    </dependency>
+    <!-- test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
