--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ notifications:
 language: java
 jdk:
   - openjdk9
-  - oraclejdk8
+  - openjdk11
+  - openjdk13
   - oraclejdk9
+  - oraclejdk11
+  - oraclejdk13
 before_install:
   # clone java-dirq repo
   - git clone --depth=100 --quiet --branch=master git://github.com/cern-mig/java-dirq.git java-dirq-git
