do not generate java-dirq javadoc

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,5 @@ before_install:
   # clone java-dirq repo
   - git clone --depth=100 --quiet --branch=master git://github.com/cern-mig/java-dirq.git java-dirq-git
   - cd java-dirq-git
-  - mvn clean install
+  - mvn -Dmaven.javadoc.skip=true clean install
   - cd ../
-  - rm -fr java-dirq-git
