--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Checkout java-dirq
+        uses: actions/checkout@v2
+        with:
+          repository: cern-mig/java-dirq
+          path: ./java-dirq
       - name: Set up Java ${{ matrix.java-version }}
         uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'adopt'
+      - name: Build java-dirq
+        working-directory: ./java-dirq
+        run: mvn --batch-mode --update-snapshots install
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
