--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ '8', '11', '17' ]
+        java-version: [ '8', '11', '17', '21' ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Checkout java-dirq
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           repository: cern-mig/java-dirq
           path: ./java-dirq
       - name: Set up Java ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'adopt'
