replaced jewelcli by picocli

--- a/pom.xml
+++ b/pom.xml
@@ -187,9 +187,9 @@
   <dependencies>
     <!-- runtime dependencies -->
     <dependency>
-      <groupId>com.lexicalscope.jewelcli</groupId>
-      <artifactId>jewelcli</artifactId>
-      <version>0.8.9</version>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>4.7.5</version>
     </dependency>
     <dependency>
       <groupId>ch.cern.dirq</groupId>
